🐛 FIX: Dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,31 +29,6 @@
     --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-
-        --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-        --secondary-glow: linear-gradient(
-            to bottom right,
-            rgba(1, 65, 255, 0),
-            rgba(1, 65, 255, 0),
-            rgba(1, 65, 255, 0.3)
-        );
-
-        --tile-start-rgb: 2, 13, 46;
-        --tile-end-rgb: 2, 5, 19;
-        --tile-border: conic-gradient(#ffffff80, #ffffff40, #ffffff30, #ffffff20, #ffffff10, #ffffff10, #ffffff80);
-
-        --callout-rgb: 20, 20, 20;
-        --callout-border-rgb: 108, 108, 108;
-        --card-rgb: 100, 100, 100;
-        --card-border-rgb: 200, 200, 200;
-    }
-}
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -68,7 +43,7 @@ body {
 }
 
 body {
-    color: rgb(var(--foreground-rgb));
+    color: #fff;
     background: #1e1e20;
 }
 
@@ -77,12 +52,6 @@ a {
     text-decoration: none;
     font-size: 18px;
     color: "#ff6b31";
-}
-
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: white;
-    }
 }
 
 /* Works on Firefox */
